# peak_ros

./: .gitignore  LICENSE  README.md  run.sh  tracked_files.txt
docker/: .env  Dockerfile  Dockerfile.dockerignore  docker-compose.yaml
peak_ros.git/: config  packed-refs
peak_ros.git/info/: refs
peak_ros.git/objects/info/: commit-graph  packs
peak_ros.git/objects/pack/: pack-d31ee09546acd0ed8b3880b72dd1dc358766874f.bitmap  pack-d31ee09546acd0ed8b3880b72dd1dc358766874f.idx  pack-d31ee09546acd0ed8b3880b72dd1dc358766874f.pack
src/peak_ros/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/peak_ros/config/: beccas.yaml  bscan.rviz  c_scan.rviz  c_scan_top_down.rviz  default.yaml  dynamic_variables.cfg  offline.yaml  post_process.rviz  post_process2.rviz  roller_probe_100_MHz.yaml  roller_probe_50_MHz.yaml
src/peak_ros/include/: peak_nodelet.h  reconstruction_nodelet.h
src/peak_ros/launch/: init.launch  play_processed_data.launch  post_process.launch  postprocess_ascans_with_tf.launch
src/peak_ros/mps/: Immersion_5MHz_NoFocus.mps  Immersion_64el_1aperture.mps  Immersion_64el_24aperture.mps  create_mps.py  immersion_128el.mps  immersion_128el_16aperture.mps  immersion_128el_2aperture.mps  immersion_128el_2aperture_20mmdeep.mps  immersion_128el_8aperture.mps  immersion_64el.mps  immersion_64el_16aperture.mps  immersion_64el_2aperture.mps  remove_AG.py
src/peak_ros/mps/composite_roller_probe/: roller_probe_wing_cover_100_MHz.mps
src/peak_ros/msg/: Observation.msg
src/peak_ros/scripts/: .~lock.alum_corr_b_scans.csv#  analyze_defects.py  analyze_defects_center_max.py  bag2mfmc.py  bag_parse.py  debug_bag.py  extract_defects.py  ply_metadata_checker.py  reconstructor.py  test_b_scan.py
src/peak_ros/src/: ascan_postprocessor.cpp  ascan_postprocessor_orig.cpp  ascan_postprocessor_with_normalization.cpp  peak_node.cpp  peak_nodelet.cpp  peak_nodelet_backup.cpp  reconstruction_node.cpp  reconstruction_nodelet.cpp  unused_peak_nodelet_angles.cpp
